# axis-os

./: package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  db.rs  lib.rs  main.rs  memory.rs  model_profiles.json  model_profiles.rs  observer.rs  shell.rs  storage.rs  system.rs  vision.rs  web.rs
src-tauri/src/components/: TitleBar.tsx
src/core/: types.ts
src/store/: osStore.ts
