[package]
name = "axis-os"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "axis_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri Core ---
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# --- Async Runtime ---
tokio = { version = "1.0", features = ["full"] }

# --- Serialization & Data ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }
thiserror = "1.0"

# --- Network & Web ---
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.25.0"

# --- System & Environment ---
sysinfo = "0.30"
dotenv = "0.15"

# --- AxisOS Capabilities (Hand/Eye) ---
enigo = "0.3"        # キーボード操作
screenshots = "0.8"  # 画面キャプチャ
base64 = "0.21"
image = "0.24"

# --- Database (Memory/Brain) ---
# bundled: FTS5(全文検索)を含むSQLite本体を内包
rusqlite = { version = "0.31", features = ["bundled"] }
